# containerimage-py

./: .buildinfo  .coveragerc  .gitignore  .pre-commit-config.yaml  .secrets.baseline  CONTRIBUTING.md  Makefile  README.md  genindex.html  index.html  objects.inv  py-modindex.html  pyproject.toml  requirements.sec.txt  requirements.test.txt  search.html  searchindex.js  tox.ini
.doctrees/: environment.pickle  index.doctree
.doctrees/image/: image.doctree  modules.doctree
.github/workflows/: build.yaml  doc.yaml  release.yaml  sec.yaml  test.yaml
_sources/image/: image.rst.txt
_static/: documentation_options.js
ci/: requirements.publish.txt  requirements.sec.txt
doc/source/: conf.py  image.rst  index.rst  modules.rst  tests.rst
doc/source/image/: modules.rst
examples/: diff.py  image-inspect.py  quick-example.py
image/: __init__.py  auth.py  byteunit.py  client.py  config.py  configschema.py  containerimage.py  containerimageinspect.py  descriptor.py  errors.py  image.html  inspectschema.py  manifest.py  manifestfactory.py  manifestlist.py  manifestlistentry.py  manifestschema.py  mediatypes.py  modules.html  oci.py  ocischema.py  platform.py  reference.py  regex.py  v2s2.py  v2s2schema.py
tests/: __init__.py  byteunit_test.py  containerimage_test.py  containerimagelist_test.py  descriptor_test.py  manifest_test.py  manifestfactory_test.py  manifestlist_test.py  manifestlistentry_test.py  oci_test.py  platform_test.py  registryclient_test.py  registryclientmock.py  v2s2_test.py
tests/mock/manifest-lists/: attestation-manifest-list.json  (+2 more)
(+9 files in other folders)
